# orbit-simulator

./: Cargo.toml  README.md
plt/: nbody.plt  sho.plt
scripts/: run_celestial.sh
src/: common.rs  lib.rs  main.rs  ode.rs  physics.rs
src/ode/: euler.rs
src/physics/: celestial.rs  sho.rs
